Added mt76 and rtl88x2bu WiFi drivers

--- a/arch/arm64/configs/nethunter_defconfig
+++ b/arch/arm64/configs/nethunter_defconfig
@@ -281,8 +281,11 @@ CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
+CONFIG_MT76x0U=y
+CONFIG_MT76x2U=y
 CONFIG_88XXAU=m
 CONFIG_RTL8188EU=y
+CONFIG_RTL8822BU=m
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_CNSS_GENL=y
